--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
+<!-- 
+LAYOUT OF HTML BOX MODEL EVERY THOUGH OF AS A BOX
+1.CENTER OUT
+A. PADDING
+B. BORDER
+C. MARGIN
+
+
+
+
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+    
 </head>
 <body>
-    <script src=""></script>
+    <script src="index.js"></script>
+    <h1>Styled Heading</h1>
+    <div id="example">
+        <p class="shadow-text" id="large-paragraph">This is a styled paragraph.</p>
+        <p class="shadow-text" id="large-paragraph">This is another styled paragraph</p>
+
+    </div>
+
+
+    <div class="hov">
+
+
+
+    </div>
+<ul class="every-third every-even">
+<li>Item</li>
+<li>Item</li>
+<li>Item</li>
+<li>Item</li>
+<li>Item</li>
+<li>Item</li>
+<li>Item</li>
+</ul>
+
+
+<table>
+<tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Email</th>
+</tr>
+<tr>
+    <td>Geordan</td>
+    <td>Daugherty</td>
+    <td>Geordan_daugherty@hotmail.com</td>
+</tr>
+<tr>
+    <td>Courtney</td>
+    <td>Daugherty</td>
+    <td>Courtney.lynn_14@yahoo.com</td>
+</tr>
+<tr>
+    <td>Lincoln</td>
+    <td>Daugherty</td>
+    <td>Lincoln_Daugherty@hotmail.com</td>
+</tr>
+<tr>
+    <td>Rhett</td>
+    <td>Daugherty</td>
+    <td>Rhett_Daugherty@hotmail.com</td>
+</tr>
+</table>
+
+
+
+
+<DIV id="box-model">
+    Content
+</DIV>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
